--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "paypal-rest-sdk": "^1.8.1",
     "sequelize": "^6.21.2",
     "sequelize-auto": "^0.8.8"
   },
